change to homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "full-mint-website",
+  "homepage": "http://wherngd1.github.io/reactgitmint",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,8 +17,7 @@
     "react-dom": "^18.2.0",
     "react-popup": "^0.11.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "http://wherngd1.github.io/reactgitmint"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
